--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Plinth Industries"
 description: "Elevating your home."
 logo: "assets/images/PlinthIndustriesLogo.png"
 favicon: "assets/images/PlinthIndustriesLogoFavicon.png"
-baseurl: /home
+baseurl: ""
 google_analytics: "UA-xxxxxxxx-1"
 disqus: "Plinth Industries"
 mailchimp-list: "https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b"
