Add hero image and update name placement

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Plinth Industries"
 title: "Plinth Industries"
-description: "Elevating your home."
+description: "Placing your home on a pedestal."
 logo: "assets/images/PlinthIndustriesLogo.png"
 favicon: "assets/images/PlinthIndustriesLogoFavicon.png"
 baseurl: ""
