Add mailchimp and privacy policy draft

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ favicon: "assets/images/PlinthIndustriesLogoFavicon.png"
 baseurl: ""
 google_analytics: "UA-xxxxxxxx-1"
 disqus: "Plinth Industries"
-mailchimp-list: "https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b"
+mailchimp-list: "https://gmail.us7.list-manage.com/subscribe/post?u=ea067eead2062de8fd79064a9&amp;id=8c72587754"
 include: ["_pages"]
 permalink: /:title/
 email: plinthindustries@gmail.com
