Update google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Placing your home on a pedestal."
 logo: "assets/images/PlinthIndustriesLogo.png"
 favicon: "assets/images/PlinthIndustriesLogoFavicon.png"
 baseurl: ""
-google_analytics: "UA-xxxxxxxx-1"
+google_analytics: "UA-2276127045-1"
 disqus: "Plinth Industries"
 mailchimp-list: "https://gmail.us7.list-manage.com/subscribe/post?u=ea067eead2062de8fd79064a9&amp;id=8c72587754"
 include: ["_pages"]
